--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -17,6 +17,10 @@
   cursor: pointer;
   font-weight: 900
 }
+.serviceTitleBack{
+  /*margin-top: -50px;*/
+  background-color: #eeeeee80 ! important;
+}
 .contentWraper{
 	height: auto;
 	background-color: transparent;
@@ -32,7 +36,9 @@
   margin-top: 40px;
   margin-left: 33px;
 }
-
+.webpageshopcontnew{
+  padding-left: 55px;
+}
 .serflip-card {
     /*background-color: #fff;*/
     /*box-shadow: 0 10px 29px rgba(92,141,255,.22);*/
