--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -14,7 +14,7 @@
     font-size: 30px;
 	  position: absolute;
     top: 5.5em;
-    left: 18em;
+    left: 20em;
     color: #333;
     font-weight: 700;
     letter-spacing: 2px;
@@ -238,7 +238,7 @@
 #consultdown_img1{
     position: absolute;
     top: 36em;
-    left: 45em;
+    left: 49em;
      height: 135px;
 }
 #consultdown_img2{
@@ -250,7 +250,7 @@
 #consultdown_img3{
     position: absolute;
     top: 63em;
-    left: 46em;
+    left: 49em;
     height: 135px;
 }
 #consultdown_img4{
@@ -262,7 +262,7 @@
 #consultdown_img5{
     position: absolute;
     top: 89em;
-    left: 45em;
+    left: 49em;
     height: 135px;
 }
 #consultdown_img6{
@@ -443,5 +443,159 @@
         top: 466px ! important;
         right: -12% ! important;
     }  
+}
+
+@media screen and (min-width: 1400px) {
+  .downimgtext{
+    left:28em !important;
+  }
+   #consultdown_img0{
+    left: 36em ! important;
+  }
+   #consultdown_data0{
+    right: 18% ! important;
+  }
+  #consultdown_data1{
+    left:13% ! important;
+  }
+  #consultdown_data3{
+    left:10% ! important;
+  }
+  #consultdown_data2{
+    right: 21% ! important;
+  }
+  #consultdown_img4{
+    left:36em ! important;
+  }
+  #consultdown_data4{
+    right: 20%;
+  }
+  #consultdown_data5{
+    left:17em ! important;
+  }
+  #consultdown_img6{
+    left:36em ! important;
+  }
+  #consultdown_data6{
+    right: 20% ! important;
+  }
+  #consultdown_img1{
+    left:67em ! important;
+
+  }
+  #consultdown_img2{
+    left:35em ! important;
+  }
+  #consultdown_img3{
+    left:67em ! important;
+
+  }
+  #consultdown_img5{
+    left:67em ! important;
+
+  }
+  
+}
+@media screen and (min-width: 1600px) {
+  .downimgtext{
+    left:28em !important;
+  }
+   #consultdown_img0{
+    left: 36em ! important;
+  }
+   #consultdown_data0{
+    right: 18% ! important;
+  }
+  #consultdown_data1{
+    left:13% ! important;
+  }
+  #consultdown_data3{
+    left:10% ! important;
+  }
+  #consultdown_data2{
+    right: 21% ! important;
+  }
+  #consultdown_img4{
+    left:36em ! important;
+  }
+  #consultdown_data4{
+    right: 20%;
+  }
+  #consultdown_data5{
+    left:17em ! important;
+  }
+  #consultdown_img6{
+    left:36em ! important;
+  }
+  #consultdown_data6{
+    right: 20% ! important;
+  }
+  #consultdown_img1{
+    left:67em ! important;
+
+  }
+  #consultdown_img2{
+    left:35em ! important;
+  }
+  #consultdown_img3{
+    left:67em ! important;
+
+  }
+  #consultdown_img5{
+    left:67em ! important;
+
+  }
+  
+}
+@media screen and (min-width: 1900px) {
+ .downimgtext{
+    left:28em !important;
+  }
+   #consultdown_img0{
+    left: 36em ! important;
+  }
+   #consultdown_data0{
+    right: 18% ! important;
+  }
+  #consultdown_data1{
+    left:13% ! important;
+  }
+  #consultdown_data3{
+    left:10% ! important;
+  }
+  #consultdown_data2{
+    right: 21% ! important;
+  }
+  #consultdown_img4{
+    left:36em ! important;
+  }
+  #consultdown_data4{
+    right: 20%;
+  }
+  #consultdown_data5{
+    left:17em ! important;
+  }
+  #consultdown_img6{
+    left:36em ! important;
+  }
+  #consultdown_data6{
+    right: 20% ! important;
+  }
+  #consultdown_img1{
+    left:67em ! important;
+
+  }
+  #consultdown_img2{
+    left:35em ! important;
+  }
+  #consultdown_img3{
+    left:67em ! important;
+
+  }
+  #consultdown_img5{
+    left:67em ! important;
+
+  }
+  
 }
 
