--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -10,15 +10,19 @@
 .Type2Img{
   /*width  : 100%;
   height : 85%;*/
-  padding:50px;
+  padding-top:50px;
+  /*padding-left: 0px;*/
 
 }
 .type1btnDiv{
+  height: 425px;
+  overflow: hidden;
+  padding-top: 70px;
   margin-bottom: 65px;
 }
 .takebuttonDown{
-      /*padding-top: 104px;*/
-    padding-left: 75px;
+    padding-top: 50px;
+    padding-left: 25px;
 }
 .line3{
 	background-color: #f08f00;
@@ -41,16 +45,33 @@
 .Typecomponent1_btn{
   margin-bottom: 50px;
 }
+.TypecomponentBtnImg{
+  width: 500px;
+  height: 380px;
+  float:right;
+}
+.TypecomponentBtnImg img{
+  height: 100%;
+  /*width: 100%;*/
+}
+.Typecomponent2BtnImg{
+  width: 500px;
+  height: 450px;
+
+  /*float:left;*/
+}
+.BtnImageDown{
+  margin-top: 20px;
+}
+.Typecomponent2BtnImg img{
+  width: 100%;
+  /*float:right;*/
+  height: 100%;
+}
 .industries_imgDiv{
   /*margin-top: 75px;*/
 }
-/*.onselecthover:hover{
-  cursor: pointer;
-  border: 1px solid #aaa;
-  box-shadow: 0px 0px 19px 4px #999;
-  
 
-}*/
 @media screen and (max-width: 600px) {
   
   .line3 {
