--- a/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
+++ b/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
@@ -13,6 +13,7 @@
 
 .resource_blck{
     border-radius: 4px;
+    padding-top: 60px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
     margin-top: 30px;
