--- a/ui/website/src/allPages/ResourcePage/ResourcePage.css
+++ b/ui/website/src/allPages/ResourcePage/ResourcePage.css
@@ -8,7 +8,7 @@ body{
 
 
 .resourcebg1{
-	background-image: url("/images/serviceback1.png");
+	/*background-image: url("/images/serviceback1.png");*/
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	/*width: 100%;*/
