--- a/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
+++ b/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
@@ -2,15 +2,19 @@
 	height: auto;
 }
 .B3T_challengesDiv {
-   top: 45px;
+    top: 45px;
     box-shadow: 0px 0px 3px 0px #d9d4d4;
-    margin-left: 50px;
+    margin-left: 23px;
     margin-bottom: 40px;
     min-height: 200px;
+    width: 350px;
+    height: 234px;
+    padding-top: 35px;
+
     
 }
 .B4T_img{
-	margin-left: 77px;
+	margin-left: 110px;
 	height: 80px;
   border-radius: 26px;
 }
