--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -17,6 +17,10 @@
   cursor: pointer;
   font-weight: 900
 }
+.classfor4{
+  padding-left: 0px ! important;
+  margin-bottom: 40px;
+}
 .serviceTitleBack{
   /*margin-top: -50px;*/
   background-color: #eeeeee80 ! important;
@@ -28,6 +32,10 @@
 	/*background-color: #fff;*/
 	/*padding-top: 35px;*/
   overflow: hidden;
+}
+.Divfor4{
+  padding-left: 0px;
+  /*padding-right: 0px;*/
 }
 .line1common{
   background-color: #f08f00;
