--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -4,9 +4,10 @@
  .B4T_ServicesDiv{
     top: 45px;
     box-shadow: 0px 0px 5px 0px #b7b3b3;
-    margin-left: 40px;
-    margin-bottom: 35px;
+    margin-left: 53px;
+    margin-bottom: 40px;
     min-height: 193px;
+    width:560px;
   }
   .B4T_ServicesDiv_mob{
     top: 45px;
