--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -69,8 +69,8 @@
 
 .iogimgblock3{
     width: 103%;
-    padding-left: 76px;
-    margin-left: 29px;
+   /* padding-left: 76px;
+    margin-left: 29px;*/
     height: 362px;
 }
 
