--- a/ui/website/src/blockTemplate/IogconsultTxtRight/IogconsultTxtRight.css
+++ b/ui/website/src/blockTemplate/IogconsultTxtRight/IogconsultTxtRight.css
@@ -6,3 +6,14 @@
 	padding-top: 140px;
 	padding-right: 65px;
 }
+.BT3_innerBlockImage{
+	height: 400px;
+	width:700px;
+	overflow: hidden;
+}
+.BT3_innerBlockImage img{
+	width: 536px;
+    height: 500px;
+    object-fit: contain;
+    float:right;
+}
