--- a/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
+++ b/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
@@ -58,7 +58,9 @@
   font-size: 17px ! important;
 }
 .B2T_overviewTxt img{
-  height: 345px;
+  width: 450px;
+  height: 350px;
+   object-fit: contain;
   /*height: 100%;
   width: 100%;*/
   /*padding-top: 30px;*/
@@ -67,7 +69,7 @@
   font-size: 17px ! important;
 }
 .websiteclass{
-  padding-top: 40px;
+  /*padding-top: 40px;*/
   /*height: 300px;*/
   margin-bottom: 40px;
 }
