--- a/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
@@ -97,8 +97,10 @@
     font-weight: 600;
 }
 .serflip-card img{
-  height: 130px;
-  margin-bottom: 15px;
+      width: 190px;
+    object-fit: contain;
+    height: 130px;
+    margin-bottom: 15px;
 }
 
 .serflip-card h2{
