Karuna added chnages

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -657,6 +657,12 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   background-image: none !important;
 }
 
+.gt__2YKbG{
+  margin-right: 59% ! important;
+}
+.sxSelectListsWrapper__2321j{
+  width: 42% ! important;
+}
 /*.goog-te-gadget{
     display: none;
  }
