--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -138,6 +138,7 @@
 .active{
     /* background-color: #a8a; */
    background-color: orange;
+   box-shadow: 0px 0px 8px 0px #fff;
 }
 .navigation_img{
     height: 20px;
