--- a/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
+++ b/ui/website/src/blockTemplate/ChallengesTemp/ChallengesTemp.css
@@ -22,6 +22,9 @@
 	margin-top: 25px;
 	margin-left: 20px;
 }
+.challengedivPadd{
+  padding-left: 90px;
+}
 
 .B4T_line{
     background-color: #f08f00;
