--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -289,7 +289,7 @@
 }
 .Main_Cards__Bubble, .Main_Cards__Wrapper:after {
     position: absolute;
-    background-color: rgba(105,92,255,.05);
+    background-color: #eeeeee4d;
     border-radius: 50%;
 }
 .Main_Cards__Bubble:nth-child(2) {
@@ -421,7 +421,7 @@
 @media (max-width: 600px) {
 
 .webpageshopcont{
-  margin-left: 30px ! important;
+  margin-left: 0px ! important;
 
  }
 }
