--- a/ui/website/src/blockTemplate/TitleRepeatGrp/TitleRepeatGrp.css
+++ b/ui/website/src/blockTemplate/TitleRepeatGrp/TitleRepeatGrp.css
@@ -63,7 +63,7 @@
 }
 .Main_Cards__Bubble1, .Main_Cards__Wrapper1:after {
     position: absolute;
-    background-color: rgba(105,92,255,.05);
+    background-color: #eeeeee4d;
     border-radius: 50%;
 }
 .Main_Cards__Bubble1:nth-child(2) {
