--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -75,11 +75,11 @@
 }
 
 .blogleftarrow{
-    background-color: #009de2;
-    border: 10px solid #009de2;
-    color: #fff;
+    /*background-color: #009de2;*/
+    border: 1px solid #eee;
+    color: #333;
     border-radius: 50%;
-    padding: 0px 8px;
+    padding: 9px 8px;
     font-size: 25px;
     left: -80px;
     height: 45px;
@@ -89,11 +89,11 @@
 
 }
 .blogrightarrow{
-    background-color: #009de2;
-    border: 10px solid #009de2;
-    color: #fff;
+    /*background-color: #009de2;*/
+    border: 1px solid #eee;
+    color: #333;
     border-radius: 50%;
-    padding: 0px 8px;
+    padding: 9px 8px;
     font-size: 25px;
     right: -80px;
     height: 45px;
@@ -107,4 +107,17 @@
 }
 .sxSelectListsWrapper__2321j{
   width: 42% ! important;
+}
+
+@media screen and (max-width: 600px) {
+  .blogblock{
+    height: 600px ! important;
+  }
+  .price-footer{
+    margin-top: 90px ! important;
+  }
+  .blogtext h4{
+    font-size: 15px ! important;
+    height: 60px ! important;
+  }
 }
