--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -62,7 +62,7 @@
     color: #333;
     margin: 0px 0px;
     padding-top: 35px;
-    background: #99999975;
+    background: #005b9929;
 
  }
  .new_wizard_length{
@@ -139,6 +139,7 @@
     /* background-color: #a8a; */
    background-color: orange;
    box-shadow: 0px 0px 8px 0px #fff;
+   font-weight: 600;
 }
 .navigation_img{
     height: 20px;
