--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -135,7 +135,7 @@
   display: block;
   color: #333;
   text-align: center;
-  padding: 14px 12px;
+  padding: 14px 8px;
   text-decoration: none;
   font-size: 12px;
   font-weight: 700;
@@ -160,7 +160,7 @@
   border: none;
   outline: none;
   color: #000;
-  padding: 14px 12px;
+  padding: 14px 8px;
   background-color: inherit;
   /*font-family: inherit;*/
   margin: 0;
@@ -211,10 +211,13 @@
     display: none;
   }
   .blogtext{
-    height: 810px ! important;
+    height: 600px ! important;
   }
   .no-icon-list li{
     padding-bottom: 0px ! important;
+  }
+  .TopnavPadding{
+    padding: 0px;
   }
   .topnav a.icon {
     top: 5px;
@@ -223,10 +226,10 @@
     float: right;
     /*right: -5px;*/
     display: block;
-    background: #fff;
+    /*background: #fff;*/
     border-radius: 4px;
-    font-size: 14px;
-    width: 32px;
+    font-size: 27px;
+    width: 70px;
     display: block;
   }
   .ct-topbar
@@ -311,10 +314,12 @@
 
 @media screen and (max-width: 600px) {
   .topnav.responsive {
-    position: relative;
-    background-color: #fff;
-    top: 42px;
-    left: 29px;
+    position: absolute;
+    background-color: #333333f5;
+    top: -34px;
+    width: 367px;
+    height: 529px;
+    left: -14px;
    }
   .topnav.responsive .icon {
     position: absolute;
@@ -324,15 +329,17 @@
   }
   .topnav.responsive a {
     float: none;
+    color:#fff;
     display: block;
-    text-align: right;
+    /*text-align: right;*/
   }
   .topnav.responsive .dropdown {float: none;}
   .topnav.responsive .dropdown-content {position: relative;}
   .topnav.responsive .dropdown .dropbtn {
     display: block;
     width: 100%;
-    text-align: right;
+    color:#fff;
+    /*text-align: right;*/
     
   }
   .topnav.responsive .dropdown-content{
@@ -481,7 +488,7 @@ body { top: 0px !important; }
   text-align: right;
   position: absolute;
   right: -31px;
-  bottom: 50px;
+  bottom: 65px;
   height: 20px;
   /*background: #eee;*/
 }
