--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -209,6 +209,7 @@ ul.no-icon-list1 {
   margin-top: 0px ! important;
 }
 .subscribeBtn{
+  height: 41px;
   border-radius: 3px;
   font-weight: 700;
   color: #fff;
