--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -243,3 +243,10 @@
 .mb_100{
     margin-bottom: 100px;
 }
+
+@media screen and (min-width: 600px) {
+    .iogimg_4 img{
+        /*width: 240px ! important;*/
+
+    }
+ }   
