--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -76,7 +76,7 @@
 
 .blogleftarrow{
     /*background-color: #009de2;*/
-    border: 1px solid #eee;
+    box-shadow: 0px 0px 5px 4px #eee;
     color: #333;
     border-radius: 50%;
     padding: 9px 8px;
@@ -90,7 +90,7 @@
 }
 .blogrightarrow{
     /*background-color: #009de2;*/
-    border: 1px solid #eee;
+    box-shadow: 0px 0px 5px 4px #eee;
     color: #333;
     border-radius: 50%;
     padding: 9px 8px;
