--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -1868,3 +1868,763 @@ a.nameParts{
   height: 800px;
   top:150px;
 }
+
+
+.new_connecting-line {
+    height: 1px;
+    background: #999;
+    position: absolute;
+    width: 100% ! important;
+    margin: 0 auto;
+    left: 0;
+    right: 640px ! important;
+    top: 57%;
+    z-index: 1;
+}
+.new_tab{
+    border: none ! important;  
+}
+.new_wizardNote
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 31px;
+    right: 15px;
+    color: #333;
+    font-weight: 500;
+ }
+ .new_wizardNotefortwo
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 31px;
+    right: 83px;
+    color: #333;
+ }
+ .new_wizardNotefor4
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 31px;
+    right: 30px;
+    color: #333;
+    font-weight: 500;
+ }
+ .new_wizardNote_for6
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 35px;
+    right: 36px;
+    color: #333;
+ }
+ .wizard-inner{
+    margin-top: 20px;
+ }
+ .new_wizard{
+    height: 200px;
+    color: #333;
+    margin: 0px 0px;
+    padding-top: 35px;
+    background: #005b9929;
+
+ }
+ .new_wizard_length{
+    height: 100px;
+    color: #fff;
+    margin: 45px 0px;
+    padding-top: 35px;
+    background: #004266;
+    margin-left: 20px;
+
+ }
+ .forthreeCircles{
+    margin-left: ''
+ }
+
+ .new_round-tab {
+    width: 24px;
+    margin-left: 29%;
+    height: 24px;
+    line-height: 36px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #f1f1f1;
+    border: 2px solid #fff;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 18px;
+    color: #000;
+    /*top:44px;*/
+}
+ .new_round-tabforTwo  {
+    width: 24px;
+    margin-left: 18%;
+    height: 24px;
+    line-height: 36px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #f1f1f1;
+    border: 2px solid #e0e0e0;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 18px;
+    color: #000;
+    /*top:44px;*/
+}
+.new_round-tabfor4 {
+    width: 24px;
+    margin-left: 29%;
+    height: 24px;
+    line-height: 36px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #f1f1f1;
+    border: 3px solid #fff;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 18px;
+    color: #000;
+    /*top:44px;*/
+}
+.nopadding{
+    padding: 0px;
+}
+.new_round-tab:hover{
+    cursor: pointer;
+}
+.active1{
+    /* background-color: #a8a; */
+   background-color: orange;
+   box-shadow: 0px 0px 8px 0px #fff;
+   font-weight: 600;
+}
+.navigation_img{
+    height: 20px;
+    width: 100%;
+}
+.navigation_tab{
+    width: 112px;
+    margin-left: 32px;
+}
+.navigation_tab_for6{
+    /*width: 165px;*/
+    margin-top: 42px;
+}
+#new_wizardNote_new0{
+    width: 147px;
+    color: #ffffff;
+    position: relative;
+    top: 24px;
+    right: 21px;
+
+}
+#new_wizardNote_new1{
+    width: 147px;
+    color: #ffffff;
+    position: relative;
+    bottom: 27px;
+    right: 21px;
+
+}
+#new_wizardNote_new2{
+    color: #ffffff;
+    width: 216px;
+    top: 24px;
+    position: relative;
+    right: 21px;
+}
+#new_wizardNote_new3{
+    color: #ffffff;
+    position: relative;
+    bottom: 27px;
+    width: 183px;
+    right: 20px;
+}
+.navigationTitle{
+    color: #333;
+    /*position: absolute; */
+    bottom: 4px;
+    left: 254px;
+    font-weight: 600;
+    font-size: 23px;
+    
+}
+.new_navigationTitle{
+    color: #333;
+    /*position: absolute; */
+    bottom: 4px;
+    left: 578px;
+    font-weight: 600;
+    font-size: 25px;
+    bottom:14px;
+
+}
+.navigationTitle_for5{
+    color: #333;
+    font-weight: 600;
+    font-size: 25px;
+    bottom:14px;
+
+}
+/*.navigationTitle_for6{
+    color: #ffffff;
+    position: absolute; 
+    top: -12px;
+    left: 3px;
+    font-weight: 600;
+    font-size: 23px;
+    bottom:14px;
+
+}*/
+
+.navigationTitle_for6
+{   
+    color: #333;
+    font-size: 25px;
+    font-weight: 600;
+    left: 596px;
+    top: 19px;
+    position: absolute;
+}
+#NavposFor51{
+    top:-32px ! important;
+
+}
+#NavposFor53{
+    top:-32px ! important;
+
+}
+.lineFor5{
+    margin-top: 26px;
+}
+.innerdivFor5{
+    margin-top: 24px;
+}
+@media only screen and (max-width : 736px)
+{
+  .navigation_tab
+  {
+   width:112px;
+  }
+  .navigation_tab{
+    margin-left: 20px ! important;
+
+  }
+
+  
+}
+@media only screen and (max-width : 768px)
+{
+    .navigation_tab{
+    margin-left: 20px ! important;
+
+  }
+  .new_round-tabforTwo{
+    margin-left: 98%;
+  }
+  .new_wizardNotefortwo{
+    right: -129px;
+  }
+  .new_wizardNote{
+    font-size: 11px;
+  }
+  .serflip-card{
+    width: 275px ! important;
+  }
+ .para-top_website{
+    margin-top: 20px ! important;
+ }
+ /*.B4T_ServicesDiv{
+    margin-left: 73px ! important;
+    min-height: 150px;
+    width: 580px;
+ }*/
+ /*.B2T1_line{
+    margin-left: 174px ! important;
+ }*/
+/* .B2T1_line1{
+    margin-left:345px ! important;
+ }*/
+ .B2T_serviceTitle{
+    margin-left: 190px;
+ }
+ .B2T_challengesTitle{
+    margin-left: 90px;
+ }
+ .BT4_imgBack{
+    margin-left: 66px;
+ }
+ .BT4_txt{
+    margin-left: 43px;
+ }
+ .new_round-tabfor4{
+    margin-left:127%;
+ }
+ .new_wizardNotefor4{
+    left:109px;
+ }
+ .adjustfor5{
+    margin-left: 17px;
+ }
+}
+
+@media only screen and (max-width : 768px){
+  .Journycaro1{
+  left: 130px ! important;
+    box-shadow: 0px 0px 3px 2px #eee;
+    margin-bottom: 20px;
+}
+.Journycaro2{
+   left: 130px ! important;
+   top:400px ! important;
+    box-shadow: 0px 0px 3px 2px #eee;
+     margin-bottom: 20px;
+
+}
+.Journycaro3{
+  left: 130px ! important;
+  top:572px ! important;
+  box-shadow: 0px 0px 3px 2px #eee;
+  margin-bottom: 20px;
+
+}
+.Journycaro4{
+ left: 130px ! important;
+ box-shadow: 0px 0px 3px 2px #eee;
+  top:742px ! important;
+ margin-bottom: 20px;
+
+}
+.Journycaro5{
+  left: 130px ! important;
+  top:1086px ! important;
+  box-shadow: 0px 0px 3px 2px #eee;
+  margin-bottom: 20px;
+
+}
+.Journycaro6{
+  left: 130px ! important;
+  box-shadow: 0px 0px 3px 2px #eee;
+  margin-bottom: 20px;
+  top:914px ! important;
+}
+.Journycaro7{
+  left: 130px ! important;
+  box-shadow: 0px 0px 3px 2px #eee;
+  margin-bottom: 20px;
+  top:1264px ! important;
+
+}
+.Journycaro8{
+ left: 130px ! important;
+ box-shadow: 0px 0px 3px 2px #eee;
+ margin-bottom: 20px;
+ top:1435px ! important;
+
+}
+.Journycaro9{
+ left: 130px ! important;
+ box-shadow: 0px 0px 3px 2px #eee;
+ margin-bottom: 20px;
+
+}
+.Journycaro10{
+ left: 130px ! important;
+ box-shadow: 0px 0px 3px 2px #eee;
+ margin-bottom: 20px;
+ top:1608px ! important;
+
+}
+.Journycaro11{
+  left: 130px ! important;
+  box-shadow: 0px 0px 3px 2px #eee;
+  margin-bottom: 20px;
+
+}
+.journytextblock{
+  width: 90% ! important;
+}
+.new_wizard_journy{
+  margin-top: 303px;
+}
+.add4 {
+    display: none;
+    left: 45px ! important ;
+    height: 40px! important;
+    top: 57px ! important;
+  }
+  .add1 {
+    display: none;
+    left: 45px ! important ;
+    height: 40px! important;
+    top: 57px ! important;
+  }
+  .add2 {
+    display: none;
+    left: 45px ! important ;
+    height: 40px! important;
+    top: 57px ! important;
+  }
+   .add3 {
+    display: none;
+    left: 167px ! important ;
+    height: 40px! important;
+    top: 180px ! important;
+  }
+   .add5 {
+    display: none;
+    left: 45px ! important ;
+    height: 46px! important;
+    top: 57px ! important;
+  }
+   .add6 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .add7 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .add8 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .add9 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .add10 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .add11  {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .add12 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+
+
+  .webclientbackimg{
+    width: 550px ! important;
+  }
+  .webclientcaro{
+    width: 519px ! important;
+  }
+.Journycaro1 p {
+  text-align: center ! important;
+}
+.Journycaro1 h3 {
+  text-align: center ! important;
+}
+.Journycaro3 p {
+  text-align: center ! important;
+}
+.Journycaro3 h3 {
+  text-align: center ! important;
+}
+.Journycaro4 p {
+  text-align: center ! important;
+}
+.Journycaro4 h3 {
+  text-align: center ! important;
+}
+.Journycaro5 p {
+  text-align: center ! important;
+}
+.Journycaro5 h3 {
+  text-align: center ! important;
+}
+.Journycaro6 p {
+  text-align: center ! important;
+}
+.Journycaro6 h3 {
+  text-align: center ! important;
+}
+.Journycaro7 p {
+  text-align: center ! important;
+}
+.Journycaro7 h3 {
+  text-align: center ! important;
+}
+.Journycaro8 p {
+  text-align: center ! important;
+}
+.Journycaro8 h3 {
+  text-align: center ! important;
+}
+.Journycaro9 p {
+  text-align: center ! important;
+}
+.Journycaro9 h3 {
+  text-align: center ! important;
+}
+.Journycaro10 p {
+  text-align: center ! important;
+}
+.Journycaro10 h3 {
+  text-align: center ! important;
+}
+.Journycaro11 p {
+  text-align: center ! important;
+}
+.Journycaro11 h3 {
+  text-align: center ! important;
+}
+.add4 
+ {
+    left: 45px ! important ;
+    height: 46px! important;
+    top: 57px ! important;
+  }
+
+.Journycaro2 p {
+  text-align: center ! important;
+}
+.Journycaro2 h3 {
+  text-align: center ! important;
+}
+  /*.Journycaro1{
+    left:40px ! important;
+  }
+  .add1{
+    left:204px ! important;
+  }
+  .add2{
+    top:363px ! important;
+    right:141px ! important;
+  }
+  .Journycaro2{
+    left:-28px ! important;
+  }*/
+}
+
+
+@media only screen and (max-width : 600px){
+.BT4_imgBack{
+    margin-left: 102px;
+}
+.BT4_txt{
+    text-align: center;
+    margin-left: 0px;
+}
+.BT3_subhead{
+    margin-left: -11px;
+}
+.Journycaro1{
+  left:0px ! important;
+}
+.Journycaro3{
+  left:0px ! important;
+}
+.Journycaro4{
+  left:0px ! important;
+}
+.Journycaro5{
+  left:0px ! important;
+  top:927px ! important;
+}
+.Journycaro6{
+  left:0px ! important;
+}
+.Journycaro7{
+  left:0px ! important;
+}
+.Journycaro8{
+  left:0px ! important;
+}
+.Journycaro9{
+  left:0px ! important;
+}
+.Journycaro10{
+  left:0px ! important;
+}
+.Journycaro11{
+  left:0px ! important;
+}
+.new_wizard_journy{
+  margin-top: 700px;
+}
+.add4 {
+    display: none;
+    left: 45px ! important ;
+    height: 40px! important;
+    top: 57px ! important;
+  }
+  .add1 {
+    display: none;
+    left: 45px ! important ;
+    height: 40px! important;
+    top: 57px ! important;
+  }
+  .add2 {
+    display: none;
+    left: 45px ! important ;
+    height: 40px! important;
+    top: 57px ! important;
+  }
+   .add3 {
+    display: none;
+    left: 167px ! important ;
+    height: 40px! important;
+    top: 180px ! important;
+  }
+   .add5 {
+    display: none;
+    left: 45px ! important ;
+    height: 46px! important;
+    top: 57px ! important;
+  }
+   .add6 {
+    display: none;
+    left: 172px ! important ;
+    height: 46px! important;
+    top: 66px ! important;
+  }
+  .webclientbackimg{
+    width: 550px ! important;
+  }
+  .webclientcaro{
+    width: 321px ! important;
+  }
+.Journycaro1 p {
+  text-align: center ! important;
+}
+.Journycaro1 h3 {
+  text-align: center ! important;
+}
+.Journycaro3 p {
+  text-align: center ! important;
+}
+.Journycaro3 h3 {
+  text-align: center ! important;
+}
+.Journycaro4 p {
+  text-align: center ! important;
+}
+.Journycaro4 h3 {
+  text-align: center ! important;
+}
+.Journycaro5 p {
+  text-align: center ! important;
+}
+.Journycaro5 h3 {
+  text-align: center ! important;
+}
+.Journycaro6 p {
+  text-align: center ! important;
+}
+.Journycaro6 h3 {
+  text-align: center ! important;
+}
+.Journycaro7 p {
+  text-align: center ! important;
+}
+.Journycaro7 h3 {
+  text-align: center ! important;
+}
+.Journycaro8 p {
+  text-align: center ! important;
+}
+.Journycaro8 h3 {
+  text-align: center ! important;
+}
+.Journycaro9 p {
+  text-align: center ! important;
+}
+.Journycaro9 h3 {
+  text-align: center ! important;
+}
+.Journycaro10 p {
+  text-align: center ! important;
+}
+.Journycaro10 h3 {
+  text-align: center ! important;
+}
+.Journycaro11 p {
+  text-align: center ! important;
+}
+.Journycaro11 h3 {
+  text-align: center ! important;
+}
+.add4 
+ {
+    left: 45px ! important ;
+    height: 46px! important;
+    top: 57px ! important;
+  }
+.Journycaro2{
+  left:0px ! important;
+}
+.Journycaro2 p {
+  text-align: center ! important;
+}
+.Journycaro2 h3 {
+  text-align: center ! important;
+}
+
+}
+@media (max-width: 480px){
+.adjustfor5{
+    margin-left: 10px ! important;
+}
+.new_round-tabfor4{
+    margin-left:27% ! important;
+}
+.new_wizardNotefor4 {
+    left: -6px ! important;
+    font-size: 12px ! important;
+}
+}
+
+@media screen and (min-width: 1400px) {
+    .navigation_tab{
+        margin-left: 48px ! important;
+    }
+}
+
+
+@media screen and (min-width: 1600px) {
+    .navigation_tab{
+        margin-left: 48px ! important;
+    }
+  
+}
+@media screen and (min-width: 1900px) {
+      .navigation_tab{
+        margin-left: 48px ! important;
+    }
+      
+}
+
