--- a/ui/website/src/allBlocks/Overview/Overview.css
+++ b/ui/website/src/allBlocks/Overview/Overview.css
@@ -73,6 +73,13 @@
   .dynamicpageimg{
     background-image: url("/images/acc.png");
   }
+  .policyMainDiv{
+    margin-top: 30px;
+    padding: 40px;
+    width: 1200px;
+    margin-left: 66px;
+    box-shadow: 0px 0px 39px -7px #eee;
+  }
   @media(max-width : 600px){
     
     .BT1_bannerTitle{
@@ -83,6 +90,12 @@
     }
 
   }
+ @media screen and (min-width: 1900px) {
+  .policyMainDiv{
+    width: 1500px ! important ;
+    margin-left: 195px ! important;
+  }
+}
 
 
    
