--- a/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
+++ b/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
@@ -92,6 +92,10 @@ height: 100px;
     /*margin-top: 45px;*/
 
   }
+  .reactplayerDiv{
+     width:324px ! important;
+     height:211px ! important;
+  }
 
 .videocard1{
   display: block;
@@ -161,4 +165,10 @@ height: 100px;
     margin: 0px;
   }
   
+}
+@media screen and (min-width: 1900px) {
+  .reactplayerDiv{
+    width: 510px ! important;
+  }
+
 }
