--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -430,7 +430,7 @@ margin-top: 100px;
 }
 
 .director_img{
-  /*width: 100%;*/
+  width: 100%;
   /* margin-left: 171px; */
   /*margin-top: 235px;*/
   border: 9px solid #fff;
@@ -528,7 +528,7 @@ margin-top: 100px;
   background-image: url("/images/Founder-Profiles.png");
   background-size: 100% 100%;
   /*height: auto;*/
-  height: 1000px;
+  height: 1045px;
 }
 
 
