--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -411,11 +411,14 @@
     margin-top: 40px;
     margin-left: 28px;
 }
+.newcard{
+  width: 290px;
+}
 
 
 @media screen and (max-width: 768px) {
   .serflip-card{
-    width: 300px ! important;
+    /*width: 300px ! important;*/
   }
  } 
 @media (max-width: 600px) {
@@ -424,6 +427,11 @@
   margin-left: 0px ! important;
 
  }
+}
+@media screen and (max-width: 600px) {
+  .contentheader{
+    margin-bottom: 0px ! important;
+  }
 }
 
 
